# botscript

apps/frontend/: Cargo.toml  package.json  pnpm-lock.yaml  tuono.config.ts
apps/frontend-vite/: package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend-vite/src/: App.tsx
apps/frontend/src/routes/: index.tsx
crates/botscript/: Cargo.toml  foo.bs  foo.java
crates/botscript/src/: lib.rs  main.rs
crates/botscript/templates/: BasicOpModeLinear.java
