[package]
name = "botscript_lib"
authors = ["Jacob Marshall <jacobm0@glynschool.org>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]  # `rlib` for CLI, `cdylib` for WebAssembly

[[bin]]
name = "botscript"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"
wasm-bindgen = "0.2.100"
