[package]
name = "botscript_lib"
authors = ["Jacob Marshall <jacobm0@glynschool.org>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]  # `rlib` for CLI, `cdylib` for WebAssembly

[[bin]]
name = "botscript"
path = "src/main.rs"

[features]
default = []  # Optional feature flags for conditional compilation
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
